# excel_azure_tasks

./: AGENTS.md  README.md  app.py  main.py  pyproject.toml  script.py
config/: task_types.py
src/application/: transform_service.py
src/domain/: models.py
src/infrastructure/: csv_writer.py  excel_reader.py  profile_store.py
tests/: test_transform_service.py
